# Storm-Discord-RPC

./: LICENSE  README.md
Android/: CMakeLists.txt  build.gradle  local.properties  settings.gradle
Android/app/: build.gradle
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: discord_rpc_native.cpp
Android/app/src/main/kotlin/: MainActivity.kt
Android/app/src/main/python/: discord_android.py
Android/icon/: HOW_TO_GET_CLIENT_ID.md
Android/src/main/: AndroidManifest.xml
Android/src/main/cpp/: discord_rpc_core.cpp  discord_rpc_wrapper.cpp  native_activity.cpp
Android/src/main/cs/: DiscordRPCManager.cs  DiscordRPCService.cs  MainActivity.cs  StormDiscordRPC.csproj
Android/src/main/java/com/storm/discordrpc/: ClientIDActivity.java  DiscordRPCManager.java  DiscordRPCService.java  HelpActivity.java  MainActivity.java  MainActivityClean.java  MainActivityFinal.java  MainActivitySimple.java  MainPagerAdapter.java  NotificationSettingsAdapter.java  PythonBridge.java  SettingsActivity.java  SettingsFragment.java  StatusFragment.java  StormNotificationManager.java
Android/src/main/python/: client_id_validator.py  discord_rpc_manager.py  python_bridge.py  utils.py
Android/src/main/res/drawable/: button_primary.xml  button_success.xml  gradient_background.xml  ic_launcher_round.xml  ic_notification.xml
Android/src/main/res/layout/: activity_client_id.xml  activity_main_with_tabs.xml  fragment_status.xml
Android/src/main/res/mipmap-hdpi/: ic_launcher.xml
Android/src/main/res/values/: colors.xml  strings.xml  styles.xml
Android/src/main/res/xml/: backup_rules.xml
Linux/: CMakeLists.txt  DiscordRPC.cs
Linux/src/: main.cpp  main_fixed.cpp  main_real.cpp  main_simple.cpp  main_working.cpp
Windows/: CMakeLists.txt  DiscordRPC.cs
Windows/src/: main.cpp
docs/: BUILD_ANDROID.md  BUILD_LINUX.md  BUILD_WINDOWS.md
shared/include/: discord_rpc.h  discord_rpc_real.h
shared/python/: discord_rpc_advanced.py  discord_rpc_simple.py
shared/src/: discord_ipc.cpp  discord_rpc_real.cpp  discord_rpc_real_impl.cpp  discord_rpc_simple.cpp
